# mcp-agent-framework

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml
docs/: conf.py  index.rst
examples/: advanced_workflow.py  basic_search.py
scripts/: populate_vectordb.py  setup_mcp_servers.py
src/mcp_agent/: __init__.py  main.py
src/mcp_agent/agents/: __init__.py  base.py  coordinator.py  reporter.py  researcher.py
src/mcp_agent/config/: __init__.py  settings.py
src/mcp_agent/graph/: __init__.py  nodes.py  workflow.py
src/mcp_agent/models/: __init__.py  schemas.py  state.py
src/mcp_agent/tools/: __init__.py  mcp_client.py  search.py  vector_store.py
src/mcp_agent/utils/: __init__.py  helpers.py  logger.py
tests/: __init__.py  conftest.py
